command-history/CH6/route-clean.yaml
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
    labels:
      app: quotesapi
    name: quotesapi
  spec:
    host: 
    port:
      targetPort: 8080-tcp
    subdomain: ""
  to:
    kind: Service
    name: quotesapi
    weight: 100
  wildcardPolicy: None
